--- a/src/components/TagInput.css
+++ b/src/components/TagInput.css
@@ -1,5 +1,5 @@
 .tag-input {
-  margin: 16px 0;
+  margin: 0;
 }
 
 .tag-label {
